add persistence dependency.